# make-a-habit-backend

./: .env.example  .gitignore  Cargo.toml  README.md  habits.db
migrations/2019-01-05-181918_create_habits/: down.sql  up.sql
migrations/2019-01-05-211458_create_recurrences/: down.sql  up.sql
src/: controllers.rs  errors.rs  main.rs  models.rs  schema.rs
src/controllers/: habits.rs
src/models/: habit.rs  recurrence.rs
