[package]
name = "backend"
version = "0.1.0"
authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["diesel_sqlite_pool"] }
rocket_cors = "0.5.0"
diesel = { version = "1.3.3", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
